Project

General

Profile

Actions

Bug #6901

closed

SEGV with tail call optimization

Bug #6901: SEGV with tail call optimization

Added by shugo (Shugo Maeda) about 14 years ago. Updated about 14 years ago.

Status:
Closed
Target version:
ruby -v:
ruby 2.0.0dev (2012-08-21 trunk 36751) [i686-linux]
Backport:
[ruby-dev:46065]

Description

r36099のfinishフレームをなくす変更以降で、添付のpromise.rbのようなコードで
末尾呼出の最適化を有効にするとSEGVが発生するようになっています。
単純な末尾再帰版factなどでは再現しませんでしたが、再現条件はよくわかっていません。

末尾再帰とブロック呼出しの組合せで発生するのかなと想像しています。

何か思い当たるフシはあるでしょうか? > ささださん


Files

promise.rb (919 Bytes) promise.rb shugo (Shugo Maeda), 08/21/2012 05:00 PM
Actions

Also available in: PDF Atom