* vm_insnhelper.c (vm_setup_method): should not enable tail call   optimization for frames with VM_FRAME_FLAG_FINISH.   [ruby-dev:46065] [Bug #6901]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@36771 b2dd03c8-39d4-4d8f-98ff-823fe69b080e